# HuffmannEncoder

./: BTree.hpp  CMakeLists.txt  README.md  huffman.cpp  huffman.hpp  huffmann.cpp  huffmann.hpp  main.cpp  util.cpp  util.hpp
Tests/: BTree.cpp  CMakeLists.txt  huffman.cpp  huffmann.cpp
